# blasfeo

./: .gitignore  .travis.yml  CMakeLists.txt  Changelog.txt  Makefile  Makefile.blas  Makefile.external_blas  Makefile.rule  README.md  README.txt  TODOlist.txt  blasfeo_target.h.in  change_name.sh  guidelines.md  version
auxiliary/: CMakeLists.txt  Makefile  blasfeo_processor_features.c  blasfeo_stdlib.c  d_aux_common.c  d_aux_ext_dep_lib.c  d_aux_ext_dep_lib4.c  d_aux_ext_dep_libref.c  d_aux_ext_dep_ref.c  d_aux_extern_depend_lib.c  d_aux_extern_depend_lib4.c  d_aux_hp_cm.c  d_aux_lib.c  d_aux_lib4.c  d_aux_lib8.c  d_aux_libref.c  d_aux_ref.c  i_aux_ext_dep_lib.c  i_aux_extern_depend_lib4.c  m_aux_lib.c  m_aux_lib44.c  m_aux_lib48.c  memory.c  s_aux_common.c  s_aux_ext_dep_lib.c  s_aux_ext_dep_lib4.c  s_aux_ext_dep_libref.c  s_aux_ext_dep_ref.c  s_aux_extern_depend_lib4.c  s_aux_hp_cm.c  s_aux_lib.c  s_aux_lib16.c  s_aux_lib4.c  s_aux_lib8.c  s_aux_libref.c  s_aux_ref.c  timing.c  v_aux_ext_dep_lib.c  x_aux_ext_dep.c  x_aux_ext_dep_common.c  (+5 more)
auxiliary/avx/: Makefile  kernel_dgecp_lib4.c  kernel_dgetr_lib4.c
auxiliary/avx2/: Makefile  kernel_dgetr_lib4.c
auxiliary/c99/: Makefile  kernel_dgecp_lib4.c  kernel_dgetr_lib4.c  kernel_sgecp_lib4.c  kernel_sgetr_lib4.c
benchmarks/: CMakeLists.txt  Makefile  Makefile.blas_api  Makefile.blasfeo_api  benchmark_bandwidth.c  benchmark_d_blas.c  benchmark_d_blas_api.c  benchmark_d_blasfeo_api.c  benchmark_s_blas.c  benchmark_s_blas_api.c  benchmark_s_blasfeo_api.c  benchmark_x_common.h  cpu_freq.h  cpu_freq.h.example  figures_blas_benchmark.m  figures_blas_comparison.m  print_blas_benchmark.m  print_blas_comparison.m  print_blas_run.m  print_blasfeo_benchmark.m  print_blasfeo_comparison.m  x_benchmark_blas_api.c  x_benchmark_blasfeo_api.c  x_blas_benchmark.c
blas/: CMakeLists.txt  Makefile  d_blas.h  d_blas1_lib.c  d_blas1_lib4.c  d_blas2_diag_lib.c  d_blas2_lib.c  d_blas2_lib4.c  d_blas3_diag_lib.c  d_blas3_diag_lib4.c  d_blas3_lib.c  d_blas3_lib4.c  d_blas3_libref.c  d_blas_64.h  d_lapack_lib.c  d_lapack_lib4.c  d_lapack_libref.c  s_blas.h  s_blas1_lib.c  s_blas1_lib4.c  s_blas1_lib8.c  s_blas2_diag_lib.c  s_blas2_lib.c  s_blas2_lib4.c  s_blas2_lib8.c  s_blas3_diag_lib.c  s_blas3_diag_lib4.c  s_blas3_diag_lib8.c  s_blas3_lib.c  s_blas3_lib4.c  s_blas3_lib8.c  s_blas3_libref.c  s_blas_64.h  s_lapack_lib.c  s_lapack_lib4.c  s_lapack_lib8.c  x_blas1_lib.c  x_blas2_diag_lib.c  x_blas2_lib.c  x_blas3_diag_lib.c  (+2 more)
examples/: CMakeLists.txt  Makefile  example_d_lq_factorization.c  example_d_lu_factorization.c  example_d_riccati_recursion.c  example_kernel_dgemm.c  example_lu_factorization.c  example_riccati_recursion.c  example_s_lu_factorization.c  example_s_riccati_recursion.c  example_tree_riccati_recursion.c  getting_started.c  kernel_dgemm.S  tools.c  tools.h
kernel/: CMakeLists.txt  Makefile  kernel_align_generic.c  kernel_align_x64.S  kernel_align_x86.S
kernel/armv7a/: Makefile  kernel_dgemm_4x4_lib.S  kernel_dgemm_4x4_lib4.S  kernel_sgemm_12x4_lib4.S  kernel_sgemm_4x4_lib.S  kernel_sgemm_4x4_lib4.S  kernel_sgemm_8x4_lib4.S
kernel/armv8a/: Makefile  kernel_d_aux_lib.S  kernel_dgemm_12x4_lib.S  kernel_dgemm_12x4_lib4.S  kernel_dgemm_4x4_lib.S  kernel_dgemm_4x4_lib4.S  kernel_dgemm_8x4_lib.S  kernel_dgemm_8x4_lib4.S  kernel_dgemv_4_lib.S  kernel_dgemv_4_lib4.S  kernel_dger_lib.S  kernel_dgetr_lib.S  kernel_dgetrf_pivot_lib.c  kernel_dgetrf_pivot_lib4.c  kernel_dpack_lib4.S  kernel_sgemm_12x4_lib4.S  kernel_sgemm_16x4_lib4.S  kernel_sgemm_4x4_lib.S  kernel_sgemm_4x4_lib4.S  kernel_sgemm_8x4_lib.S  kernel_sgemm_8x4_lib4.S  kernel_sgemm_8x8_lib.S  kernel_sgemm_8x8_lib4.S  kernel_sgemv_4_lib4.S  kernel_spack_lib4.S
kernel/avx/: CMakeLists.txt  Makefile  kernel_d_aux_lib.S  kernel_dgebp_lib4.S  kernel_dgecp_lib4.c  kernel_dgemm_10xX_lib4.S  kernel_dgemm_12x4_lib4.S  kernel_dgemm_4x2_lib4.S  kernel_dgemm_4x4_lib.S  kernel_dgemm_4x4_lib4.S  kernel_dgemm_6xX_lib4.S  kernel_dgemm_8x2_lib4.S  kernel_dgemm_8x4_lib.S  kernel_dgemm_8x4_lib4.S  kernel_dgemm_diag_lib4.c  kernel_dgemm_nt_4x4_lib4.S  kernel_dgemm_nt_8x4_lib4.S  kernel_dgemm_nt_add_4x4_lib4.S  kernel_dgemm_nt_add_4x4_lib4_bkp.S  kernel_dgemm_nt_add_4x4_lib4_tmp.c  kernel_dgemm_nt_add_8x4_lib4.S  kernel_dgemv_12_lib4.S  kernel_dgemv_4_lib.S  kernel_dgemv_4_lib4.S  kernel_dgemv_8_lib4.S  kernel_dgepb_lib4.S  kernel_dgeqrf_4_lib4.c  kernel_dgetr_lib.S  kernel_dgetr_lib4.c  kernel_dgetrf_pivot_4_lib4.c  kernel_dgetrf_pivot_lib.c  kernel_dgetrf_pivot_lib4.c  kernel_dpack_lib4.S  kernel_dsymv_4_lib4.S  kernel_dsymv_6_lib4.S  kernel_sgead_lib8.S  kernel_sgecp_lib8.S  kernel_sgecpsc_lib8.S  kernel_sgemm_16x4_lib.S  kernel_sgemm_16x4_lib8.S  (+11 more)
kernel/avx2/: CMakeLists.txt  Makefile  kernel_dgebp_lib4.S  kernel_dgelqf_4_lib4.S  kernel_dgelqf_4_lib4.c  kernel_dgelqf_4_lib4_bkp.c  kernel_dgemm_10xX_lib4.S  kernel_dgemm_12x4_lib.S  kernel_dgemm_12x4_lib4.S  kernel_dgemm_4x2_lib4.S  kernel_dgemm_4x4_lib.S  kernel_dgemm_4x4_lib4.S  kernel_dgemm_4x8_lib.S  kernel_dgemm_4x8_lib4.S  kernel_dgemm_6xX_lib4.S  kernel_dgemm_8x2_lib4.S  kernel_dgemm_8x4_lib.S  kernel_dgemm_8x4_lib4.S  kernel_dgemm_8x8_lib.S  kernel_dgemm_8x8_lib4.S  kernel_dgemm_nt_12x4_lib4.S  kernel_dgemm_nt_4x4_lib4.S  kernel_dgemm_nt_8x4_lib4.S  kernel_dgemm_nt_add_12x4_lib4.S  kernel_dgemm_nt_add_4x4_lib4.S  (+20 more)
tests/: CMakeLists.txt  Makefile  Makefile.tpl  README.md  batch_run.json  batch_test.json  batch_test.sh  batch_test.sh.local.sample  do_test.sh  recipe_all.json  recipe_default.json  recipe_example_blasapi.json  recipe_syrk.json  recipe_travis.json  routines.json  test.c  test_assembly.c  test_class_aux1args.c  test_class_aux2args.c  test_class_aux3args.c  test_class_gemm-blasapi.c  test_class_gemm.c  test_class_getrf.c  test_class_syrk.c  test_class_trm.c  test_d_aux.c  test_d_blas3.c  test_d_blas_api.c  test_d_blasfeo_api.c  test_d_common.c  test_d_common.h  test_d_custom.c  test_d_debug.c  test_s_aux.c  test_s_blas3.c  test_s_blas_api.c  test_s_blasfeo_api.c  test_s_common.c  test_s_common.h  test_s_custom.c  (+56 more)
(+483 files in other folders)
